infrastructure/base/monitoring/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  dependsOn: infra-traefik
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.${CLUSTER_DOMAIN}`)
      services:
        - name: prometheus-operated
          port: 9090
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
